fix feedback EntryV4 layout issue (#2620)

--- a/front/2020/components/Feedback/EntryV4/style.less
+++ b/front/2020/components/Feedback/EntryV4/style.less
@@ -18,6 +18,17 @@
       position: absolute;
       left: 0px;
       right: 0px;
+
+      overflow: hidden;
+      visibility: visible;
+      opacity: 1;
+      transition: visibility 0s, opacity .2s;
+
+      &.hidden {
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility 0s .2s, opacity .2s;
+      }
     }
 
     .wechatPanel {
